# mlops_app

./: .dockerignore  .gitignore  Dockerfile  README.md  params.yaml  pyproject.toml
.github/workflows/: ci.yml  request-training.yml
schemas/: trigger.v1.json
src/price_forecast/: __init__.py  app.py  config.py  contracts.py  factories.py  layout.py  loader.py  metrics.py  publisher.py  schemas.py  validation.py
src/price_forecast/adapters/: github_dispatch.py  s3_store.py
src/price_forecast/ports/: __init__.py  storage.py
src/price_forecast/templates/: admin.html
tests/integration/: test_s3_contract.py
tests/unit/: test_config.py  test_contract_sync.py  test_contracts.py  test_layout.py  test_metrics.py  test_publisher.py  test_trigger_status.py  test_validation.py
