[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "price-forecast"
version = "0.1.0"
description = "Price forecasting API — independent serving layer that consumes models trained by the MLOps training repo via S3 pointer files."
requires-python = ">=3.10"
dependencies = [
  "flask>=3.0",
  "boto3>=1.34",
  "joblib>=1.3",
  "scikit-learn>=1.4",
  "pandas>=2.0",
  "pydantic>=2.5",
  "typer>=0.9",
  "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=4.1",
  "ruff>=0.5",
  "moto[s3]>=5.0",  # in-process S3 mock for contract tests
]

[project.scripts]
price-forecast-serve = "price_forecast.app:cli"
price-forecast-trigger = "price_forecast.publisher:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
