[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "price-forecast"
version = "0.1.0"
description = "Price forecasting API — independent serving layer that consumes models trained by the MLOps training repo via S3 pointer files."
requires-python = ">=3.10"
dependencies = [
  "flask>=3.0,<4",
  "boto3>=1.34,<2",
  "joblib>=1.3,<2",
  "scikit-learn>=1.4,<2",
  "pandas>=2.0,<3",
  "pydantic>=2.5,<3",
  "typer>=0.9,<1",
  "loguru>=0.7,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
  "pytest-cov>=4.1,<6",
  "ruff>=0.5,<2",
  "moto[s3]>=5.0,<6",
]

[project.scripts]
price-forecast-serve = "price_forecast.app:cli"
price-forecast-trigger = "price_forecast.publisher:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["price_forecast"]

[tool.ruff.lint.per-file-ignores]
